# libvterm

./: .gitignore  API  CHANGELOG  CMakeLists.txt  COPYING  Makefile  README.md  TESTING  TESTING.md  TODO  c16_color.def  color_cache.c  color_cache.h  color_list.c  color_list.h  color_map.c  color_map.h  color_math.c  color_math.h  keymap_linux.def  keymap_rxvt.def  keymap_vt100.def  keymap_xterm.def  libvtermConfig.cmake.in  macros.h  mouse_driver.c  mouse_driver.h  mouse_driver_SGR.c  mouse_driver_X10.c  nc_wrapper.c  nc_wrapper.h  strings.c  strings.h  stringv.h  vterm.c  vterm.h  vterm_aio.c  vterm_buffer.c  vterm_buffer.h  vterm_color_map.c  (+68 more)
demo/: CMakeLists.txt  build.sh  build_demo.sh  colors.def  ctimer.c  ctimer.h  protothread.h  vshell  vshell.c  wc_syms.def
test/: build.sh  build_test.sh  color_text.sh  keytest.c  koine_gk.txt  test.c  test_bufapi.c  test_history.c  test_render.c  test_resize.c  test_shift.c  tput-colorcube
